--- a/.prettierrc
+++ b/.prettierrc
@@ -1,19 +1,12 @@
 {
   "arrowParens": "always",
-  "bracketSameLine": false,
   "bracketSpacing": true,
-  "embeddedLanguageFormatting": "auto",
-  "htmlWhitespaceSensitivity": "css",
-  "insertPragma": false,
-  "jsxSingleQuote": false,
+  "endOfLine": "auto",
   "printWidth": 120,
-  "proseWrap": "preserve",
   "quoteProps": "as-needed",
-  "requirePragma": false,
   "semi": true,
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
-  "useTabs": false,
-  "vueIndentScriptAndStyle": false
+  "useTabs": false
 }
