--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "express-js-template",
+  "name": "axolite-service",
   "version": "1.0.0",
-  "description": "Express JS Template",
+  "description": "Axolite service",
   "keywords": [
     "dinhquanelv",
     "express",
-    "js",
-    "template"
+    "axolite",
+    "service"
   ],
-  "homepage": "https://github.com/dinhquanelv/express-js-template#readme",
+  "homepage": "https://github.com/dinhquanelv/axolite-service#readme",
   "bugs": {
-    "url": "https://github.com/dinhquanelv/express-js-template/issues"
+    "url": "https://github.com/dinhquanelv/axolite-service/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dinhquanelv/express-js-template.git"
+    "url": "git+https://github.com/dinhquanelv/axolite-service.git"
   },
   "license": "ISC",
   "author": "dinhquanelv",
